# sfo-cmd-server

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: client-server-design.md
examples/: tcp_cmd_client.rs  tcp_cmd_server.rs
src/: cmd.rs  errors.rs  lib.rs  peer_connection.rs  peer_id.rs  tunnel.rs  tunnel_id.rs
src/client/: classified_client.rs  client.rs  mod.rs
src/node/: classified_node.rs  mod.rs  node.rs
src/server/: mod.rs  peer_manager.rs  server.rs
tests/: communication_matrix.rs
