[package]
name = "sfo-cmd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.86"
sfo-result = "0.2.4"
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", features = ["derive"]}
log = "0.4.25"
sha2 = "0.10.8"
num = "0.4.3"
base58 = "0.2.0"
sfo-pool = "0.2.1"
callback-trait = "0.1.3"

[dev-dependencies]
rustls = { version = "0.23.20", default-features = false, features = ["ring", "std"] }
rcgen = "0.13.0"
tokio-rustls = "0.26.1"
