[package]
name = "sfo-cmd-server"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/wugren/sfo-cmd-server.git"
description = "command server implement"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.86"
sfo-result = "0.2.6"
bucky-raw-codec = {version = "0.1", features = ["derive"]}
log = "0.4.25"
sha2 = "0.10.8"
num = "0.4.3"
base58 = "0.2.0"
sfo-pool = "0.2.6"
callback-trait = "0.1.3"
callback-result = "0.2.3"
hex = "0.4.3"
base-x = "0.2.11"
as-any = "0.3.1"
sfo-split = "0.1.2"
rand = "0.9.1"
futures-lite = "2.6.0"
pin-project-lite = "0.2.16"
async-named-locker = "0.1.3"

[dev-dependencies]
rustls = { version = "0.23.20", default-features = false, features = ["ring", "std"] }
rcgen = "0.13.0"
tokio-rustls = "0.26.1"

